examples/gateway/mygateway.yaml
apiVersion: core.chirpstack.crossplane.io/v1alpha1
kind: Gateway
metadata:
  name: crossplane-gateway-test
spec:
  forProvider:
    name: crossplane-test
    description: gateway created by crossplane control plane, update
    tenant_id: 52f14cd4-c6f1-4fbd-8f87-4025e1d49242
    gateway_id: "1111111111111111"
    stats_interval: 30
    location:
      latitude: "44.4833037"
      longitude: "11.3577261"
      altitude: "0"
      accuracy: "0"
      source: 0
  providerConfigRef:
    name: example
